changes to form items

--- a/sites/all/themes/openscholar/scholar_base/forms.css
+++ b/sites/all/themes/openscholar/scholar_base/forms.css
@@ -2,8 +2,8 @@
 
 div.form-item {
   border:none;
-  margin:0 0 10px;
-  padding:9px;
+  margin:0 0 .5em 0;
+  padding:0;
   }
 
 div.form-item, ul.links, div.admin-panel .body {
@@ -24,19 +24,17 @@ div.fieldset, fieldset, .container-inline-date {
   }
 
 
-legend, legend a {
+legend, legend a, div.form-item label, fieldset h2.fieldset-title {
   color: #666;
   font-weight: bold;
   }
 
 
 fieldset h2.fieldset-title, div.form-item label {
-  font-size:11px;
-  line-height: 13px;
-  font-weight:normal;
+  font-size:.9em;
+  line-height: 1em;
   margin:0;
   padding:0;
-  text-transform:uppercase;
   }
 
 div.description, div.form-item div.description {
@@ -44,6 +42,10 @@ div.description, div.form-item div.description {
   font-size:11px;
   line-height:15px;
   margin:5px 0;
+  }
+
+.wysiwyg-field-edit-comment {
+  color: #666;
   }
 
 div.teaser-checkbox div.form-item, div.form-item div.form-item, fieldset div.form-item, .container-inline-date div.form-item {
