--- a/sites/all/themes/custom/projects_harvard/projects-harvard.css
+++ b/sites/all/themes/custom/projects_harvard/projects-harvard.css
@@ -39,3 +39,12 @@ body {
 p.copy {
   color: #fff;
   }
+
+.panel {
+  width: 980px;
+  margin-top: 0;
+  }
+
+#block-views-openscholar_sites-block_2 .views-row .views-field-field-vsite-logo-fid {
+  display:none;
+  }
