fixed registration page

--- a/sites/all/modules/openscholar_sitewide/scholarregister/theme/scholarregister.css
+++ b/sites/all/modules/openscholar_sitewide/scholarregister/theme/scholarregister.css
@@ -37,7 +37,7 @@ body.page-site-register #edit-password-wrapper {
 #edit-password-pass2-wrapper,
 #edit-password-pass1-wrapper,
 #edit-password-pass2-wrapper {
-  width: 329px;
+  width: 49%;
   float:left;
   margin: 0;
   position: relative;
@@ -85,7 +85,7 @@ body.page-site-register #success-message p {
 
 #name-field input, #mail-field input,
 #edit-password-wrapper input {
-  width: 315px;
+  width: 93%;
   margin: 0;
   }
 
