featured sites for projects

--- a/sites/all/themes/custom/projects_harvard/projects-harvard.css
+++ b/sites/all/themes/custom/projects_harvard/projects-harvard.css
@@ -45,6 +45,16 @@ p.copy {
   margin-top: 0;
   }
 
+#block-views-openscholar_sites-block_2 ul {
+  padding-top: 30px;
+  }
+
+#block-views-openscholar_sites-block_2 .views-row { {
+  width: 250px;
+  height: 40px;
+  margin-bottom: .5em;
+  }
+
 #block-views-openscholar_sites-block_2 .views-row .views-field-field-vsite-logo-fid {
   display:none;
   }
