featured sites for projects

--- a/sites/all/themes/custom/projects_harvard/projects-harvard.css
+++ b/sites/all/themes/custom/projects_harvard/projects-harvard.css
@@ -49,7 +49,7 @@ p.copy {
   padding-top: 30px;
   }
 
-#block-views-openscholar_sites-block_2 .views-row { {
+#block-views-openscholar_sites-block_2 .views-row {
   width: 250px;
   height: 40px;
   margin-bottom: .5em;
