change to carousel

--- a/sites/all/modules/custom/harvard/iqss_openscholar_front/carousel.css
+++ b/sites/all/modules/custom/harvard/iqss_openscholar_front/carousel.css
@@ -15,15 +15,11 @@
 .jcarousel-skin-os_front .jcarousel-item {
   width:196px;
   height: 295px;
-  margin: 0 2px;
+  margin: 0;
   background-color: #fff;
   padding: 26px 24px;
   border:1px solid #000;
   border-left: none;
-  }
-
-.jcarousel-skin-os_front .jcarousel-item-1 {
-  border-left:1px solid #000;
   }
 
 .jcarousel-skin-os_front .jcarousel-item-placeholder {
