change to site link

--- a/sites/all/themes/custom/projects_harvard/projects-harvard.css
+++ b/sites/all/themes/custom/projects_harvard/projects-harvard.css
@@ -45,6 +45,10 @@ p.copy {
   margin-top: 0;
   }
 
+#more-info, #more-info p {
+  margin-top: 0;
+  }
+
 #block-views-openscholar_sites-block_2 ul {
   padding-top: 30px;
   }
@@ -57,4 +61,9 @@ p.copy {
 
 #block-views-openscholar_sites-block_2 .views-row .views-field-field-vsite-logo-fid {
   display:none;
+  }
+
+.views-field-title a {
+  font-size: 13px;
+  color: #1b86a9;
   }
