something didnt get committed earlier

--- a/sites/all/themes/custom/projects_harvard/projects-harvard.css
+++ b/sites/all/themes/custom/projects_harvard/projects-harvard.css
@@ -40,6 +40,10 @@ p.copy {
   color: #fff;
   }
 
+#panel-wrapper {
+  width:auto;
+  }
+
 .panel {
   width: 980px;
   margin-top: 0;
@@ -51,10 +55,11 @@ p.copy {
 
 #block-views-openscholar_sites-block_2 ul {
   padding-top: 30px;
+  padding-left: 182px;
   }
 
 #block-views-openscholar_sites-block_2 .views-row {
-  width: 250px;
+  width: 206px;
   height: 40px;
   margin-bottom: .5em;
   }
