added project title block which randomly has a different id..

--- a/sites/all/themes/openscholar/scholar_aglet/scholar-aglet.css
+++ b/sites/all/themes/openscholar/scholar_aglet/scholar-aglet.css
@@ -276,7 +276,7 @@ body.no-sidebars #content-wrapper {
   padding-left: 12px;
   }
 
-#block-scholar-1 {
+#block-scholar-1, #block-scholar_project-1 {
   float:left;
   }
 
