this maybe didnt get checked in before

--- a/sites/all/themes/openscholar/cp_theme/forms.css
+++ b/sites/all/themes/openscholar/cp_theme/forms.css
@@ -274,7 +274,8 @@ fieldset.group-account-basics {
 
 /* Node Creation */
 
-body.section-node-add form#node-form div.form-item {
+body.section-node-add form#node-form div.form-item,
+body.section-node-edit form#node-form div.form-item {
   max-width: 800px;
   }
 
