rechecking in css

--- a/sites/all/themes/custom/openscholar/openscholar.css
+++ b/sites/all/themes/custom/openscholar/openscholar.css
@@ -105,6 +105,18 @@ p.copy {
   line-height: 40px;
   }
 
+ul.grid {
+  padding: 0;
+  margin: 0;
+  }
+
+ul.grid li {
+  float:left;
+  width:253px;
+  margin-right: 40px;
+  list-style: none;
+  }
+
 /* WRAPPER ELEMENTS */
 
 
@@ -220,7 +232,7 @@ body.page-home #content-wrapper #content, body.page-home #content-wrapper .colum
 #navbar {
   height: 59px;
   line-height:59px;
-  background:#c51009;
+  background:#622323;
   }
 
 #navbar #block-vsite_menus-0 {
@@ -323,7 +335,7 @@ body.page-home #content-wrapper #content, body.page-home #content-wrapper .colum
   }
 
 body.page-home #footer {
-  background:#373737;
+  background:#000;
   }
 
 #footer-inner {
