hacking hacking hacking

--- a/sites/all/themes/custom/projects_harvard/projects-harvard.css
+++ b/sites/all/themes/custom/projects_harvard/projects-harvard.css
@@ -55,17 +55,23 @@ p.copy {
 
 #block-views-openscholar_sites-block_2 ul {
   padding-top: 30px;
-  padding-left: 182px;
+  padding-left: 111px;
   }
 
 #block-views-openscholar_sites-block_2 .views-row {
   width: 206px;
-  height: 40px;
+  height: 50px;
   margin-bottom: .5em;
+  margin-right: 62px;
   }
 
-#block-views-openscholar_sites-block_2 .views-row .views-field-field-vsite-logo-fid {
+#block-views-openscholar_sites-block_2 .views-row .views-field-field-vsite-logo-fid,
+#views-exposed-form-openscholar-sites-page-1 .views-field-field-vsite-logo-fid {
   display:none;
+  }
+
+#views-exposed-form-openscholar-sites-page-1 td {
+  padding: 1em;
   }
 
 .views-field-title a {
