front page fix etc

--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -424,6 +424,7 @@ body.no-sidebars #content-main, body.header-main #header-main {
   padding-left: 2em;
   padding-right: 2em;
   width: auto;
+  float:none;
   }
 
 #header-wrapper, #navbar, #content-wrapper, #footer {
