--- a/sites/all/themes/custom/openscholar/openscholar.css
+++ b/sites/all/themes/custom/openscholar/openscholar.css
@@ -110,11 +110,12 @@ ul.grid {
   margin: 0;
   }
 
-ul.grid li {
+#content .node ul.grid li {
   float:left;
   width:253px;
   margin-right: 40px;
   list-style: none;
+  padding: 0;
   }
 
 /* WRAPPER ELEMENTS */
@@ -149,7 +150,7 @@ body.page-home #content-wrapper #content, body.page-home #content-wrapper .colum
 /* HEADER */
 
 #header {
-  height: 117px;
+  height: 120px;
   background: #fff;
   }
 
@@ -180,7 +181,7 @@ body.page-home #content-wrapper #content, body.page-home #content-wrapper .colum
 
 #header ul.menu li a, #header ul.menu li a:visited {
   font-size: 13px;
-  padding: 0 14px;
+  padding: 0 7px;
   display:block;
   text-decoration: none;
   }
@@ -232,7 +233,7 @@ body.page-home #content-wrapper #content, body.page-home #content-wrapper .colum
 #navbar {
   height: 59px;
   line-height:59px;
-  background:#622323;
+  background:#3b484d;
   }
 
 #navbar #block-vsite_menus-0 {
