--- a/sites/all/themes/custom/projects_harvard/projects-harvard.css
+++ b/sites/all/themes/custom/projects_harvard/projects-harvard.css
@@ -66,7 +66,7 @@ p.copy {
   }
 
 #block-views-openscholar_sites-block_2 .views-row .views-field-field-vsite-logo-fid,
-#views-exposed-form-openscholar-sites-page-1 .views-field-field-vsite-logo-fid {
+body.section-websites .views-field-field-vsite-logo-fid {
   display:none;
   }
 
