fixed bug on front page

--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -34,8 +34,8 @@ body {
   box-shadow: 0 5px 13px rgba(0,0,0,0.35);
   }
 
-body.header- #content-wrapper {
-  margin-top: 30px;
+body.no-sidebars #content-wrapper {
+  padding-top:1px;
   }
 
 #content-wrapper .column {
@@ -245,7 +245,7 @@ ul#top-front li a:hover {
 #panel-viewer {
   overflow:hidden;
   width: 990px;
-  margin-top: -10px;
+  margin-top: -11px;
   }
 
 #panel-wrapper {
