change css to respond to module change - gary taxonomy pages

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -50,7 +50,7 @@ h4 {
   margin-bottom: 27px;
   }
 
-h2.title, .block h3.title, #pub_type_tabs h3.title, .taxonomy-term-child h3, #block-vsite_menus-1 li {
+h2.title, .block h3.title, #pub_type_tabs h3.title, .taxonomy-term-child h3.taxonomy-heading, #block-vsite_menus-1 li {
   margin: 0 -16px .5em -16px;
   padding: 13px 16px 16px 16px;
   background: #fcfcfc;
@@ -67,7 +67,7 @@ h2.title, .block h3.title, #pub_type_tabs h3.title, .taxonomy-term-child h3, #bl
   right-right: 0;
   }
 
-.taxonomy-term-child h3 {
+.taxonomy-term-child h3.taxonomy-heading {
   color: #CC6733;
   font-size: 1.4em;
   background: #fff;
@@ -75,7 +75,7 @@ h2.title, .block h3.title, #pub_type_tabs h3.title, .taxonomy-term-child h3, #bl
   padding-top: 0;
   }
 
-.taxonomy-term-child .taxonomy-term-child h3 {
+.taxonomy-term-child .taxonomy-term-child h3.taxonomy-heading {
   padding: 0;
   margin-left:0;
   margin-right: 0;
