needed changes to psr, presentations, aglet

--- a/sites/all/themes/custom/psr/psr.css
+++ b/sites/all/themes/custom/psr/psr.css
@@ -22,6 +22,10 @@ body {
   background:#efefef;
   }
 
+h2.title, h3.title {
+  color: #000;
+  }
+
 #sidebar-left h3 {
   background: #e4e8bd;
   }
