theming to gary research group

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -533,7 +533,7 @@ body.page-iqss-gking-research-group .ui-tabs-nav li.ui-tabs-selected a:visited {
   }
 
 body.page-iqss-gking-research-group #ui-tabs-16,
-body.page-iqss-gking-research-group #ui-tabs-25
+body.page-iqss-gking-research-group #ui-tabs-25,
 body.page-iqss-gking-research-group #ui-tabs-27 {
   -moz-column-count: 3;
   -moz-column-gap: 1em;
