gary front page context link

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -448,6 +448,22 @@ body.header-right-main #header-wrapper {
   font-weight: bold;
   }
 
+.page-home #header-main {
+  position: relative;
+  }
+
+.page-home #header-main .ctools-dropdown {
+  position: absolute;
+  top:217px;
+  right: 0;
+  background: #eaeaea;
+  width: 120px;
+  padding: 0 0 0 7px;
+  -moz-border-radius: 10px 0 0 10px;
+  -webkit-border-radius: 10px 0 0 10px;
+  border-radius: 10px 0 0 10px;
+  }
+
 /* Publications Tabs & Research Group Tabs */
 
 .page-home #content-main #pub_type_tabs {
