re-adding white flavor to scholar_quinn

--- a/sites/all/themes/openscholar/scholar_quinn/scholar-quinn.css
+++ b/sites/all/themes/openscholar/scholar_quinn/scholar-quinn.css
@@ -69,17 +69,17 @@ h2.title {
   right: 210px;
   }
 
+.header-main #header, .header-main-right #header {
+  margin-left: 189px;
+  }
+
 #sidebar-right, #header-right {
   padding-right: 0;
-  margin-right: -200px
+  margin-right: -190px
   }
 
 #header-right {
-   margin-right: -210px;
-   }
-
-#sidebar-left, #sidebar-right {
-  padding-top: 50px;
+  margin-right: -210px;
   }
 
 body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
@@ -87,13 +87,12 @@ body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
   }
 
 #content-wrapper, #header-wrapper {
-  padding-left: 200px;
-  padding-right: 200px;
+  padding-left: 190px;
+  padding-right: 190px;
   }
 
 #header-wrapper {
-  padding-left: 190px;
-  padding-right: 190px;
+  padding-right: 210px;
   }
 
 #content-wrapper {
@@ -198,6 +197,9 @@ body.sidebar-left #footer, body.two-sidebars #footer {
     padding: 1.5em;
     background: #fff;
     margin-bottom: 10px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
     }
 
 #comments {
