--- a/sites/all/themes/openscholar/scholar_quinn/scholar-quinn-ie.css
+++ b/sites/all/themes/openscholar/scholar_quinn/scholar-quinn-ie.css
@@ -1,15 +1,6 @@
-body.header-left-main-right #header-left {
-  left: 220px;
-  }
-
-
-body.two-sidebars #sidebar-left {
+#header-left, #sidebar-left {
   left: 190px;
   }
-
-body.header-left-main #header-left {
-  left: -20px !important;
-	}
 
 #block-vsite_menus-0 ul.menu li a {
   height: 1%;
