changed font for scholar_eloquent

--- a/sites/all/themes/openscholar/scholar_eloquent/scholar-eloquent.css
+++ b/sites/all/themes/openscholar/scholar_eloquent/scholar-eloquent.css
@@ -1,18 +1,11 @@
-@font-face {
-	font-family: 'TheanoDidotRegular';
-	src: url('fonts/TheanoDidot-Regular.eot');
-	src: local('fonts/Theano Didot'), local('fonts/TheanoDidot-Regular'), url('fonts/TheanoDidot-Regular.woff') format('woff'), url('fonts/TheanoDidot-Regular.ttf') format('truetype'), url('fonts/TheanoDidot-Regular.svg#TheanoDidot-Regular') format('svg');
-}
-
-
 html {
     min-width: 910px;
     }
 
 body {
     background-color: #44514f;
-    color:#2F2F2F;
-    font-family: palatino, 'palatino linotype','times new roman', times, serif;
+    color:#000;
+    font: 15px/normal 'Book Antiqua',garamond, 'times new roman', times, serif;
     }
 
 #wrapper {
@@ -37,7 +30,6 @@ a:hover {
 h1, h2, h3, #header {
     color:#484b63;
     font-weight: bold;
-    font-family: 'TheanoDidotRegular', palatino, 'palatino linotype','times new roman', times, serif;
     }
 
 h2 {
@@ -128,8 +120,7 @@ body.no-sidebars #content-wrapper {
 
 #header h1 {
   margin-top: 16px;
-  margin-bottom: .3em;
-  text-transform: uppercase;
+  margin-bottom: 0;
   font-size: 31px;
   text-shadow: #222 0 0 .4em;
   color: #F7F3EA;
