--- a/sites/all/themes/openscholar/scholar_base/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/dropdown.css
@@ -31,6 +31,15 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul {
 }
 
 
+.ctools-dropdown-no-js .ctools-dropdown div.ctools-dropdown-container ul li,
+#content .ctools-dropdown-no-js .ctools-dropdown-container-wrapper ul.links li {
+  display:inline;
+  float: left;
+  border: none;
+  padding: 0 !important;
+  margin-right: .5em;
+  }
+
 html.js div.ctools-dropdown div.ctools-dropdown-container {
   min-width: 165px;
   background: #fff;
@@ -79,18 +88,35 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul li{
   padding: 0 0 0 13px !important;
   }
 
-.context-links .ctools-dropdown-container-wrapper a, .ctools-dropdown-container-wrapper ul.links li a, li.cite_distribute, .context-links .ctools-dropdown-container-wrapper .flag-wrapper {
+.context-links .ctools-dropdown-container-wrapper a,
+.ctools-dropdown-container-wrapper ul.links li a,
+.context-links .ctools-dropdown-container-wrapper .flag-wrapper {
   background: #fff !important;
   padding: 3px 0 3px 13px !important;
   color: #000 !important;
   }
 
-.context-links .ctools-dropdown-container-wrapper a:hover, .ctools-dropdown-container-wrapper ul.links li a:hover, li.cite_distribute:hover, .context-links .ctools-dropdown-container-wrapper .flag-wrapper:hover {
+.ctools-dropdown-no-js .ctools-dropdown-container-wrapper ul.links li a,
+.ctools-dropdown-no-js .context-links .ctools-dropdown-container-wrapper .flag-wrapper {
+  padding:0 !important;
+  color: #228822 !important;
+  }
+
+
+.context-links .ctools-dropdown-container-wrapper a:hover, .ctools-dropdown-container-wrapper ul.links li a:hover,
+.context-links .ctools-dropdown-container-wrapper .flag-wrapper:hover {
   background-color: #356df6 !important;
   color: #fff !important;
   text-transform: none;
   font-weight: bold;
   text-decoration: none;
+  }
+
+
+
+.ctools-dropdown-no-js div.ctools-dropdown-container ul li a,
+#content .ctools-dropdown-no-js div.ctools-dropdown-container ul li a{
+  padding: 0;
   }
 
 .context-links .ctools-dropdown-container-wrapper .flag-wrapper a {
