gary research group

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -149,6 +149,13 @@ a.more {
   margin-bottom: 0;
   }
 
+.page-iqss-gking-research-group #content div.node-type-person ul li {
+  padding: 0;
+  }
+
+.page-iqss-gking-research-group #content .node ul.links {
+  padding-bottom: 5px;
+  }
 
 /* Secondary Menu */
 
