--- a/sites/all/themes/openscholar/scholar_base/biblio.css
+++ b/sites/all/themes/openscholar/scholar_base/biblio.css
@@ -268,3 +268,10 @@ body.node-type-biblio .node-type-biblio .field-field-biblio-image {
 .biblio-entry ul.links {
   clear:none;
   }
+
+textarea.biblio-citation {
+  width: 100%;
+  display:block;
+  padding:10px;
+  border: 1px solid #ccc;
+  }
