added position/title to teaser of person

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -64,7 +64,11 @@ h2.title, .block h3.title, #pub_type_tabs h3.title, .taxonomy-term-child h3.taxo
   padding: 0;
   border: none;
   margin-left: 0;
-  right-right: 0;
+  margin-right: 0;
+  }
+
+.node-type-person h3.title span.position {
+  font-weight: normal;
   }
 
 .taxonomy-term-child h3.taxonomy-heading {
@@ -653,7 +657,7 @@ body.page-iqss-gking-research-group h3 {
   }
 
 #footer p.copy {
-  margin-top:0;
+  margin-top:2px;
   color: #fff;
   font-size:10px;
   }
