--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -299,12 +299,14 @@ ul.pager {
 
 .item-list ul.pager li {
   margin: 0;
+  padding: .3em;
   }
 
 ul.pager li.pager-current {
-  background: #005C9C;
+  background: #5ba4d9;
   color: #fff;
   }
+
 
 dd.meta {
   color:#767676;
