theming of gary research group, and inline version of admin links

--- a/sites/all/themes/openscholar/scholar_base/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/dropdown.css
@@ -98,12 +98,13 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul li{
 
 .ctools-dropdown-no-js .ctools-dropdown-container-wrapper ul.links li a,
 .ctools-dropdown-no-js .context-links .ctools-dropdown-container-wrapper .flag-wrapper {
-  padding:0 !important;
+  padding:0 1px !important;
   color: #228822 !important;
   }
 
 
-.context-links .ctools-dropdown-container-wrapper a:hover, .ctools-dropdown-container-wrapper ul.links li a:hover,
+.context-links .ctools-dropdown-container-wrapper a:hover,
+.ctools-dropdown-container-wrapper ul.links li a:hover,
 .context-links .ctools-dropdown-container-wrapper .flag-wrapper:hover {
   background-color: #356df6 !important;
   color: #fff !important;
@@ -112,15 +113,12 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul li{
   text-decoration: none;
   }
 
-
-
-.ctools-dropdown-no-js div.ctools-dropdown-container ul li a,
-#content .ctools-dropdown-no-js div.ctools-dropdown-container ul li a{
-  padding: 0;
-  }
-
 .context-links .ctools-dropdown-container-wrapper .flag-wrapper a {
   display:inline;
+  }
+
+.ctools-dropdown-no-js .ctools-dropdown-container-wrapper ul.links li a:hover {
+  font-weight: normal;
   }
 
 
