fixed grid of websites

--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -517,6 +517,40 @@ p.copy {
   font-size: 1.1em;
   }
 
+/* Different Tables for admin use */
+
+table {
+  font-size: .8em;
+  }
+
+table th {
+  font-size: .8em;
+  text-transform: uppercase;
+  background-color: #eee;
+  border: 1px solid #ddd;
+  padding: 5px;
+  }
+
+tr.even, tr.odd {
+  border-bottom: 1px solid #ccc;
+  padding: .1em .6em;
+  }
+
+tr.even {
+  background-color: #eee;
+  }
+
+td, td.description {
+  border: 1px solid #ddd;
+  padding: 5px;
+  color: #222;
+  font-size: .9em;
+  }
+
+.section-websites .view-openscholar-sites td {
+  width: 25%;
+  }
+
 /* FRONT PAGE vSITE PROFILES */
 
 
