--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -1,4 +1,4 @@
-#block-iqss_gking-areas_of_research {
+.page-home #block-iqss_gking-areas_of_research {
   width:100%;
   position: relative;
   padding:0;
@@ -12,7 +12,7 @@
   border: none;
   }
 
-#block-iqss_gking-areas_of_research h3.title {
+.page-home #block-iqss_gking-areas_of_research h3.title {
   margin: 0;
   font-size: 1.56em;
   line-height: 33px;
@@ -26,7 +26,7 @@
   letter-spacing:0;
   }
 
-#block-iqss_gking-areas_of_research h4 {
+.page-home #block-iqss_gking-areas_of_research h4 {
   color: #68efde;
   margin-bottom:34px;
   margin-top: 0;
@@ -38,22 +38,22 @@
   font-weight:normal;
   }
 
-#block-iqss_gking-areas_of_research .col {
+.page-home #block-iqss_gking-areas_of_research .col {
   margin-top: 0;
   }
 
-#block-iqss_gking-areas_of_research #methods {
+.page-home #block-iqss_gking-areas_of_research #methods {
     text-align: right;
     float: left;
     width:262px;
     }
 
-#block-iqss_gking-areas_of_research #applications {
+.page-home #block-iqss_gking-areas_of_research #applications {
     float: right;
     width: 298px;
     }
 
-#block-iqss_gking-areas_of_research dd {
+.page-home #block-iqss_gking-areas_of_research dd {
     position:absolute;
     display:none;
     width:224px;
@@ -68,60 +68,60 @@
     font-size:13px;
     }
 
-#block-iqss_gking-areas_of_research #applications dd {
+.page-home #block-iqss_gking-areas_of_research #applications dd {
   border-left:none;
   border-right: 2px solid #db7002;
   }
 
-#block-iqss_gking-areas_of_research dd:nth-child(2) {
+.page-home #block-iqss_gking-areas_of_research dd:nth-child(2) {
   display:block;
   }
 
-#block-iqss_gking-areas_of_research dt {
+.page-home #block-iqss_gking-areas_of_research dt {
     position:relative;
     line-height: normal;
     margin-bottom:10px;
     font-size: 13px;
     }
 
-#block-iqss_gking-areas_of_research #methods dt span,
-#block-iqss_gking-areas_of_research #methods h4 {
+.page-home #block-iqss_gking-areas_of_research #methods dt span,
+.page-home #block-iqss_gking-areas_of_research #methods h4 {
   margin-right: 31px;
   }
 
-#block-iqss_gking-areas_of_research #applications dt,
-#block-iqss_gking-areas_of_research #applications h4 {
+.page-home #block-iqss_gking-areas_of_research #applications dt,
+.page-home #block-iqss_gking-areas_of_research #applications h4 {
   padding-left:59px;
   left: 0;
   }
 
-#block-iqss_gking-areas_of_research #applications dt span {
+.page-home #block-iqss_gking-areas_of_research #applications dt span {
   display:block;
   padding-left:0.5em;
   text-indent:-0.5em;
   }
 
-#block-iqss_gking-areas_of_research dt.active {
+.page-home #block-iqss_gking-areas_of_research dt.active {
   background: url('images/line.png') no-repeat 0 50% #3b4e4e;
   }
 
-#block-iqss_gking-areas_of_research #methods dt.active {
+.page-home #block-iqss_gking-areas_of_research #methods dt.active {
   background-position: 236px 50%;
   }
 
-#block-iqss_gking-areas_of_research dt.active span {
+.page-home #block-iqss_gking-areas_of_research dt.active span {
   background: #3b4e4e;
   }
 
-#block-iqss_gking-areas_of_research dt span a,
-#block-iqss_gking-areas_of_research dt span a:visited {
+.page-home #block-iqss_gking-areas_of_research dt span a,
+.page-home #block-iqss_gking-areas_of_research dt span a:visited {
   color: #fff;
   }
 
-#block-iqss_gking-areas_of_research dt span a:hover {
+.page-home #block-iqss_gking-areas_of_research dt span a:hover {
   text-decoration: none;
   }
 
-#block-iqss_gking-areas_of_research dt.active span a {
+.page-home #block-iqss_gking-areas_of_research dt.active span a {
   color:#e87702;
   }
