theming of gary area of interest sidebar block

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -161,6 +161,48 @@ a.more {
   padding-bottom: 5px;
   }
 
+#sidebar-right #block-iqss_gking-areas_of_research {
+  background:#3b4e4e;
+  }
+
+#sidebar-right #block-iqss_gking-areas_of_research h3.title {
+  background: url(images/aor-h3.png) 0 100% repeat-x #504F4B;
+  color: #fff;
+  margin-left: -24px;
+  margin-right: -24px;
+  margin-bottom: 0;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 0;
+  padding-bottom: 23px;
+  border: none;
+  font-weight:normal;
+  line-height: 38px;
+  }
+
+#sidebar-right #block-iqss_gking-areas_of_research a, #sidebar-right #block-iqss_gking-areas_of_research a:visited {
+  color: #fff;
+  }
+
+#sidebar-right #block-iqss_gking-areas_of_research a:hover {
+  color:#e87702;
+  text-decoration: none;
+  }
+
+#sidebar-right #block-iqss_gking-areas_of_research h4 {
+  margin-bottom: 0;
+  color:#68efde;
+  }
+
+#sidebar-right #block-iqss_gking-areas_of_research dd {
+  display:none;
+  }
+
+#sidebar-right #block-iqss_gking-areas_of_research #methods {
+  margin-bottom: .5em;
+  }
+
+
 /* Secondary Menu */
 
 #block-vsite_menus-1,
