slight padding top of recent writings block

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -599,6 +599,7 @@ body.page-iqss-gking-research-group .ui-tabs-nav li.ui-tabs-selected a:visited {
 
 .ui-tabs .ui-tabs-panel {
   clear: both;
+  padding-top: 1em;
   }
 
 body.page-iqss-gking-research-group h3 {
