new base theme configuration

--- a/sites/all/themes/openscholar/openscholar_default/css/openscholar_default.css
+++ b/sites/all/themes/openscholar/openscholar_default/css/openscholar_default.css
@@ -82,7 +82,7 @@ div.form-item {
   }
 
 #block-openscholar_front-top_links a {
-  background:url(images/get-your-site-button.png) no-repeat;
+  background:url(../images/get-your-site-button.png) no-repeat;
   text-align: center;
   line-height: 38px;
   display: block;
@@ -269,7 +269,7 @@ html[xmlns] #content-bottom:after {
   }
 
 #block-views-openscholar_sites-block_2 h3 {
-  background: url(images/featured.png) 0 0 no-repeat transparent;
+  background: url(../images/featured.png) 0 0 no-repeat transparent;
   text-indent: -999em;
   width:70px;
   height: 64px;
