--- a/sites/all/themes/openscholar/scholar_base/css/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/css/dropdown.css
@@ -84,7 +84,7 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul li{
 .context-links a {
   font-style: normal !important;
   font-size: 12px !important;
-  background: url(images/plus.png) no-repeat 0 50% transparent !important;
+  background: url(../images/plus.png) no-repeat 0 50% transparent !important;
   padding: 0 0 0 13px !important;
   }
 
@@ -123,7 +123,7 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul li{
 
 
 ul.links .vsite-admin a.ctools-dropdown-link {
-  background: url(images/admin-wrench.png) 0 0 no-repeat transparent;
+  background: url(../images/admin-wrench.png) 0 0 no-repeat transparent;
   padding-left: 20px;
   }
 
