--- a/sites/all/themes/openscholar/scholar_base/css/forms.css
+++ b/sites/all/themes/openscholar/scholar_base/css/forms.css
@@ -93,7 +93,7 @@ fieldset,select {
   }
 
 .search-form .container-inline {
-  background: url(images/searchglass.gif) no-repeat 100% 0;
+  background: url(../images/searchglass.gif) no-repeat 100% 0;
   height: 18px;
   line-height:normal;
   max-width: 278px;
