--- a/sites/all/themes/openscholar/scholar_base/css/icons.css
+++ b/sites/all/themes/openscholar/scholar_base/css/icons.css
@@ -9,17 +9,17 @@
 /* Leaf, collapsed, and expanded icons used for navigation */
   .block li.leaf, ul.menu li.leaf
   {
-    list-style-image: url(images/menu-leaf.png);
+    list-style-image: url(../images/menu-leaf.png);
   }
 
 .block li.collapsed, ul.menu li.collapsed
   {
-    list-style-image: url(images/menu-collapsed.png);
+    list-style-image: url(../images/menu-collapsed.png);
   }
 
   .block li.expanded, ul.menu li.expanded
   {
-    list-style-image: url(images/menu-expanded.png);
+    list-style-image: url(../images/menu-expanded.png);
   }
 
   .block li a.active
@@ -31,7 +31,7 @@
   #user-login-form li.user-link, /* The "Cancel OpenID login" links. */
   #user-login li.user-link
   {
-    list-style-image: url(images/bullet.png);
+    list-style-image: url(../images/bullet.png);
   }
 
 /* Forum posts and recent blog posts */
@@ -41,7 +41,7 @@
     list-style-image: none;
     margin: 0;
     padding: 5px 0 5px 20px;
-    background-image: url(images/page.png);
+    background-image: url(../images/page.png);
     background-repeat: no-repeat;
     background-position: 0 .5em;
   }
@@ -52,7 +52,7 @@
     list-style-image: none;
     margin: 0;
     padding: 5px 0 5px 20px;
-    background-image: url(images/blog.png);
+    background-image: url(../images/blog.png);
     background-repeat: no-repeat;
     background-position: 0 .7em;
   }
@@ -64,7 +64,7 @@
     list-style-image: none;
     margin: 0;
     padding: 5px 0 5px 20px;
-    background-image: url(images/user.png);
+    background-image: url(../images/user.png);
     background-repeat: no-repeat;
     background-position: 0 .5em;
   }
@@ -77,7 +77,7 @@
 
   div.status
   {
-    background-image: url(images/dialog-information.png);
+    background-image: url(../images/dialog-information.png);
     background-repeat: no-repeat;
     background-position: .5em 50%;
   }
@@ -85,7 +85,7 @@
   div.warning,
   div.error
   {
-    background-image: url(images/dialog-warning.png);
+    background-image: url(../images/dialog-warning.png);
     background-repeat: no-repeat;
     background-position: .5em 50%;
   }
@@ -94,11 +94,11 @@
   #main .node div.links
   {
     padding: 5px 0 5px 13px;
-    background: url(images/links.png) no-repeat 0 .93em;
+    background: url(../images/links.png) no-repeat 0 .93em;
   }
 
 /* Administration panel */
   .admin-panel h3
   {
-    background: #6191C5 url(images/cog.png) no-repeat .5em .5em;
+    background: #6191C5 url(../images/cog.png) no-repeat .5em .5em;
   }
