--- a/sites/all/themes/openscholar/scholar_base/css/modal.css
+++ b/sites/all/themes/openscholar/scholar_base/css/modal.css
@@ -51,7 +51,7 @@ div.ctools-modal-content .modal-form {
   display:block;
   width: 70px;
   height:59px;
-  background: url(images/close-ctools.png) no-repeat 0 0 transparent;
+  background: url(../images/close-ctools.png) no-repeat 0 0 transparent;
   bottom: 27px;
   right: 23px;
   text-indent: -999em;
@@ -135,7 +135,7 @@ div.ctools-modal-content .resizable-textarea {
   bottom: 0;
   left: 0;
   width: 40px;
-  background: url(images/dropdown-window.png) repeat-x 0 100% transparent;
+  background: url(../images/dropdown-window.png) repeat-x 0 100% transparent;
   }
 
 #ctools-right {
@@ -152,5 +152,5 @@ div.ctools-modal-content .resizable-textarea {
   right: 23px;
   left: 40px;
   top: auto;
-  background: url(images/dropdown-window-bot.png) repeat-x 0 100% transparent;
+  background: url(../images/dropdown-window-bot.png) repeat-x 0 100% transparent;
   }
