--- a/sites/all/themes/openscholar/scholar_base/css/ctools.css
+++ b/sites/all/themes/openscholar/scholar_base/css/ctools.css
@@ -14,11 +14,11 @@ a.ctools-ajaxing,
 input.ctools-ajaxing,
 select.ctools-ajaxing, ul.admin li a.ctools-ajaxing, html.js a.views-throbbing, html.js span.views-throbbing {
   padding-right: 25px !important;
-  background: url(images/throbber.gif) right center no-repeat;
+  background: url(../images/throbber.gif) right center no-repeat;
 }
 
 div.ctools-ajaxing {
   float: left;
   width: 25px;
-  background: url(images/throbber.gif) center center no-repeat;
+  background: url(../images/throbber.gif) center center no-repeat;
 }
