--- a/sites/all/themes/openscholar/scholar_base/css/ie-7.css
+++ b/sites/all/themes/openscholar/scholar_base/css/ie-7.css
@@ -1,28 +1,18 @@
-/* $Id: ie.css,v 1.4 2008/09/20 20:57:27 johnalbin Exp $ */
-
-/*
- * IE CSS
- *
- * CSS targeted specifically for Internet Explorer for Windows.
- *
- * Properties starting with an underscore _ are for IE 5 and 6 only.
- * Properties starting with head:first-child+body are for IE7 only.
- * Properties with a child selector (>) or sibling selector (+) are for IE7 only.
- *
- */
-
-/*
- * Layout CSS
- */
-
-
 /** floating divs **/
 .item-list ul.context-links li,
 .empty-content p,
 .empty-content .item-list ul.context-links li,
 .ahah-progress .throbber,
 .column,
-#powered-link {
+p.copy #powered-link,
+.flL,
+.flR,
+p.copy a.footer-login,
+.img-flL,
+.img-flR,
+body.cp-toolbar-mini #top ul.links li,
+body.header-left-right #header-right,
+{
   display: inline;
   }
 
@@ -70,4 +60,8 @@ ul.primary li a, ul.primary li a:visted {
 
 ul.primary li.active a {
   _background: #ffffff;
+  }
+
+* html .clearfix, * html .clear-block {
+	height: 1%;
   }
