--- a/sites/all/themes/openscholar/scholar_eloquent/css/scholar-eloquent.css
+++ b/sites/all/themes/openscholar/scholar_eloquent/css/scholar-eloquent.css
@@ -15,7 +15,7 @@ body {
 #container {
     width: 950px;
     margin: 0 auto;
-    background:url(images/bg.png) top center repeat-y #434f4d;
+    background:url(../images/bg.png) top center repeat-y #434f4d;
     }
 
 a, a:visited {
@@ -109,7 +109,7 @@ body.no-sidebars #content-wrapper {
 /* HEADER ELEMENTS */
 
 #header {
-    background: #44514F url(images/top.png) no-repeat 50% 100%;
+    background: #44514F url(../images/top.png) no-repeat 50% 100%;
     color: #F7F3EA;
     padding-bottom: 18px;
     }
@@ -189,7 +189,7 @@ body.two-sidebars #content {
 /* Footer*/
 #footer {
   text-align: center;
-  background: url(images/bottom.png) no-repeat 1px 0 #44514F;
+  background: url(../images/bottom.png) no-repeat 1px 0 #44514F;
   padding-top: 30px;
   padding-bottom: 30px;
   }
