presentation files in teaser now floated

--- a/sites/all/modules/openscholar_features/scholar_presentations/theme/scholar_presentations.css
+++ b/sites/all/modules/openscholar_features/scholar_presentations/theme/scholar_presentations.css
@@ -11,3 +11,9 @@
 .presentation-content {
   margin-left: 5.5em;
   }
+
+.node-type-presentation.node-teaser .field-type-filefield .odd,
+.node-type-presentation.node-teaser .field-type-filefield .even {
+ float:left;
+ margin-right: .4em;
+ }
