presentation changes for gary

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -606,6 +606,23 @@ body.page-iqss-gking-research-group h3 {
   color: #000;
   }
 
+.node-type-presentation.node-teaser span.title,
+.node-type-presentation.node-teaser span.location {
+  font-weight:bold;
+  }
+
+.node-type-presentation.node-teaser div.filefield-file {
+  display:inline;
+  }
+
+.node-type-presentation.node-teaser div.filefield-file {
+  display:inline;
+  margin-right: .3em;
+  }
+.node-type-presentation.node-teaser div.filefield-file img {
+  vertical-align:text-top;
+  }
+
 /* FOOTER */
 
 #footer {
