presentation changes for gary

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -606,6 +606,10 @@ body.page-iqss-gking-research-group h3 {
   color: #000;
   }
 
+.node-type-presentation.node-teaser {
+  margin-bottom: 1.5em;
+  }
+
 .node-type-presentation.node-teaser span.title,
 .node-type-presentation.node-teaser span.location {
   font-weight:bold;
