presentation changes for gary

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -624,7 +624,7 @@ body.page-iqss-gking-research-group h3 {
   margin-right: .3em;
   }
 .node-type-presentation.node-teaser div.filefield-file img {
-  vertical-align:text-top;
+  vertical-align:middle;
   }
 
 /* FOOTER */
