major clean up of css

--- a/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
+++ b/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
@@ -64,7 +64,7 @@ body#tinymce ol li {
 	top: 0;
 	bottom: auto;
 	height: 42px;
-	background:url(images/top-bottom-bg.png) repeat-x #000 0 -9px;
+	background:url(../images/top-bottom-bg.png) repeat-x #000 0 -9px;
 	}
 
 #footer {
@@ -224,7 +224,7 @@ body.admin-menu #main-content {
 
 #cp-sidemenu li.active a,
 #cp-sidemenu li.active-trail a {
-  /*background: url(images/cp-sidemenu-active.png) 0 100% repeat-x #b8c0c0;*/
+  /*background: url(../images/cp-sidemenu-active.png) 0 100% repeat-x #b8c0c0;*/
   background: #b8c0c0;
   color: #000;
   text-decoration: none;
@@ -257,7 +257,7 @@ body.admin-menu #main-content {
   width: 553px;
   height: 23px;
   text-indent: -999em;
-  background: url(images/footer-logo.png) no-repeat transparent;
+  background: url(../images/footer-logo.png) no-repeat transparent;
   margin-left: 33px;
   margin-top: 11px;
   }
