--- a/sites/all/themes/openscholar/scholar_base/css/biblio.css
+++ b/sites/all/themes/openscholar/scholar_base/css/biblio.css
@@ -170,6 +170,11 @@ a:active {
 }
 */
 
+
+#biblio-header img {
+  border: none;
+  }
+
 .biblio-abstract-link {
   text-align: left;
   text-decoration: none;
@@ -184,6 +189,10 @@ a:active {
   font-style: normal;
   font-weight: normal;
 }
+
+.biblio_file_links {
+  margin-left: .3em;
+  }
 
 ul.biblio-export-buttons,ul.biblio-export-buttons li {
   background: transparent;
