--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -850,3 +850,38 @@ body.section-category .taxonomy-term-description {
    right:10px;
    padding-right:25px;
    }
+
+
+/* Alt Branding */
+
+body.gking-alt #wrapper {
+  background: transparent;
+  }
+
+body.gking-alt #header {
+  min-height: 10px;
+  }
+
+body.gking-alt #block-vsite_menus-0 {
+  display:none;
+  }
+
+body.gking-alt #navbar {
+  background: transparent;
+  position: fixed;
+  top: auto;
+  bottom:0;
+  z-index: 10;
+  width:173px;
+  height: 30px;
+  }
+
+body.gking-alt #block-scholar-1 h1,
+body.gking-alt #block-scholar-1 h1 a {
+  height:30px;
+  line-height: 30px;
+  }
+
+body.gking-alt #footer {
+  left: 173px;
+  }
