--- a/sites/all/themes/openscholar/cp_theme/css/spaces.css
+++ b/sites/all/themes/openscholar/cp_theme/css/spaces.css
@@ -17,12 +17,17 @@ table.spaces-features {
   margin:0px 0px 20px;
   }
 
-table.spaces-settings div.description { white-space:normal; }
-
-table.spaces-features tr.enabled td.name {
-  background: url(images/check-mark.png) no-repeat 140px 50%;
+table.spaces-settings div.description {
+  white-space:normal;
   }
 
+table.spaces-features tr {
+  border-bottom: 1px solid #ccc;
+  }
+
+table.spaces-features tr.enabled td.name {
+  background: url(../images/check-mark.png) no-repeat 140px 50%;
+  }
 
 table.spaces-features tr.disabled td.action a { display:none; }
 
