--- a/sites/all/themes/openscholar/scholar_base/css/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/css/dropdown.css
@@ -1,4 +1,3 @@
-/* $Id: dropdown.css,v 1.5 2009/07/21 01:21:43 merlinofchaos Exp $ */
 html.js div.ctools-dropdown div.ctools-dropdown-container {
   z-index: 1001;
   display: none;
@@ -10,11 +9,11 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
 
 html.js div.ctools-dropdown div.ctools-dropdown-container ul li a {
   display: block;
-}
+  }
 
 html.js div.ctools-dropdown div.ctools-dropdown-container ul {
   list-style-type: none;
-}
+  }
 
 .ctools-dropdown div.ctools-dropdown-container ul li,
 #content .ctools-dropdown-container-wrapper ul.links li {
@@ -23,12 +22,12 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul {
   margin: 0;
   background-image: none;
   text-transform:capitalize;
-}
+  }
 
 .ctools-dropdown-no-js .ctools-dropdown-link,
 .ctools-dropdown-no-js span.text {
   display: none;
-}
+  }
 
 
 .ctools-dropdown-no-js .ctools-dropdown div.ctools-dropdown-container ul li,
@@ -73,8 +72,9 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
 .item-list ul.context-links li,.ctools-dropdown,
 .ctools-dropdown .ctools-dropdown-link-wrapper,
 .ctools-dropdown .ctools-dropdown-container-wrapper,
-html.js div.ctools-dropdown div.ctools-dropdown-container ul li{
-  display:inline;
+div.ctools-dropdown div.ctools-dropdown-container ul li {
+  display:block;
+  width: 100%;
   }
 
 .ctools-dropdown {
@@ -96,16 +96,24 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul li{
   color: #000 !important;
   }
 
+.ctools-dropdown-container-wrapper ul.links li.flag-featuredposts {
+  position: relative;
+  }
+
+.ctools-dropdown-container-wrapper .flag-wrapper span.flag-throbber {
+  position: absolute;
+  right: 0;
+  top: 0;
+  }
+
 .ctools-dropdown-no-js .ctools-dropdown-container-wrapper ul.links li a,
 .ctools-dropdown-no-js .context-links .ctools-dropdown-container-wrapper .flag-wrapper {
   padding:0 1px !important;
   color: #228822 !important;
   }
 
-
 .context-links .ctools-dropdown-container-wrapper a:hover,
-.ctools-dropdown-container-wrapper ul.links li a:hover,
-.context-links .ctools-dropdown-container-wrapper .flag-wrapper:hover {
+.ctools-dropdown-container-wrapper ul.links li a:hover {
   background-color: #356df6 !important;
   color: #fff !important;
   text-transform: none;
@@ -121,10 +129,10 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul li{
   font-weight: normal;
   }
 
-
 ul.links .vsite-admin a.ctools-dropdown-link {
   background: url(../images/admin-wrench.png) 0 0 no-repeat transparent;
   padding-left: 20px;
+  font-size: 11px;
   }
 
 .vsite-admin a.ctools-dropdown-link:active {
@@ -134,7 +142,6 @@ ul.links .vsite-admin a.ctools-dropdown-link {
 .empty-content .item-list ul.context-links li {
   float: left;
   }
-
 
 .page-node-add-event .date-clear-block {
   display:inline-block;
